clusters/lotr/default/authentik/app/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app authentik
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik1.pixelstack.live`)
      kind: Rule
      services:
        - name: authentik-server
          port: 443
      middlewares:
        - name: secured
